# ez-pre-commit

./: .pre-commit-hooks.yaml  README.md  pyproject.toml  uv_bump_version.py
src/ez_pre_commit/: uv_bump_version.py
