[project]
name = "ez-pre-commit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[project.scripts]
uv_bump = "ez_pre_commit.uv_bump_version:main"

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"
